skale specifics to builders/app developer

--- a/src/content/docs/builders/app-developers/sfuel-distribution/contract-distribution.mdx
+++ b/src/content/docs/builders/app-developers/sfuel-distribution/contract-distribution.mdx
@@ -3,7 +3,7 @@ title: Smart Contract Distribution
 description: Smart Contract  Distribution
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 Distribution through a smart contract is a good way to implement the distribution as well as other requirements/logic in more secure and decentralized manner.
 
