--- a/src/content/docs/builders/tools/index.mdx
+++ b/src/content/docs/builders/tools/index.mdx
@@ -24,7 +24,7 @@ The tools section covers available tooling for developing on SKALE. This include
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/tools/nfts">
-		<Card title="NFTs Tools">
+		<Card title="NFTs">
 			Check the popular SKALE tools to be used in your NFT collections
 		</Card>
 	</a>
