nodes section to builders

--- a/src/content/docs/builders/node-operators/archive-node.mdx
+++ b/src/content/docs/builders/node-operators/archive-node.mdx
@@ -3,7 +3,7 @@ title: Archive Node
 description: Intro to Archive Node
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Within the realm of nodes, there are distinct types tailored for specific purposes. For instance, archive nodes specialize in storing comprehensive historical data of the blockchain and providing it upon request."
