--- a/src/content/docs/builders/node-operators/overview.mdx
+++ b/src/content/docs/builders/node-operators/overview.mdx
@@ -2,3 +2,26 @@
 title: Node Operator Overview
 description: Overview for validators and node operators of SKALE Network
 ---
+
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+
+The SKALE network comprises various types of nodes and software designed to ensure the reliability, speed, security, and decentralization of SKALE chains.
+
+<CardGrid>
+	<LinkCard
+		title="SKALE Node"
+		href="/builders/node-operators/skale-nodes"
+	/>
+    <LinkCard
+		title="Full Sync Node"
+		href="/builders/node-operators/full-sync-node"
+	/>
+	<LinkCard
+		title="Archive Node"
+		href="/builders/node-operators/archive-node"
+	/>
+    <LinkCard
+		title="SKALE Proxy"
+		href="/builders/node-operators/skale-proxy"
+	/>
+</CardGrid>
