--- a/src/content/docs/builders/node-operators/skale-nodes.mdx
+++ b/src/content/docs/builders/node-operators/skale-nodes.mdx
@@ -3,7 +3,7 @@ title: SKALE Nodes
 description: Intro to SKALE Nodes
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="The SKALE Network consists of a large pool of validator nodes, all running concurrently and independently, validating transactions within the SKALE Chains they oversee. These nodes coordinate with a set of smart contracts that run on the Ethereum mainnet called SKALE Manager."
