--- a/src/content/docs/builders/node-operators/skale-proxy.mdx
+++ b/src/content/docs/builders/node-operators/skale-proxy.mdx
@@ -3,7 +3,7 @@ title: SKALE Proxy
 description: Intro to SKALE Proxy
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="To make it easier to connect to SKALE Chains, developers can use a reverse proxy to load balance transactions across a SKALE Chain's 16 individual node endpoints."
