Add Chain Info, Update Initial Landing Page on Quick Start

--- a/src/content/docs/quick-start/building-for-skale.mdx
+++ b/src/content/docs/quick-start/building-for-skale.mdx
@@ -1,20 +1,11 @@
 ---
-title: Build
+title: Building for SKALE
 description: Build on SKALE
 ---
 import { SelectChain } from "../../../components/SelectChain";
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
-<br />
-<SelectChain client:load text="Selected Chain" blockClick={true} showDetails={true} />
-
-### Next Steps
-
-1. Deploy your contracts to your selected SKALE Testnet Chain
-2. Explore the [tools](#tools) below
-3. Join us in [Discord](https://discord.com/invite/gM5XBy6) to ask questions and share your work.
-
-{/*### SKALE Specifics*/}
+SKALE Chains and the greater SKALE Network offer a number of benefits 
 
 {/*#### sFUEL Distribution*/}
 
