--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -24,16 +24,19 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 	</a>
 	<a id="home-learn-icon-link" style="text-decoration: none; color: var(--sl-color-white);" href="/learn/about-skale-network">
 		<Card title="Learn about SKALE" icon="information">
+			{/* Add action word to start */}
 			Whether you have heard of SKALE or not; there is always something to learn in the docs
 		</Card>
 	</a>
 	<a id="home-support-icon-link" style="text-decoration: none; color: var(--sl-color-white);" href="https://discord.com/invite/gM5XBy6" target="_blank">
 		<Card title="Support" icon="discord">
+			{/* Add action word to start */}
 			Introduce yourself to the community or get support right in the community Discord
 		</Card>
 	</a>
 	<a id="home-tools-icon-link" href="/builders/tools" style="text-decoration: none; color: var(--sl-color-white);">
 		<Card title="Tools" icon="forward-slash">
+			{/* Add action word to start */}
 			The open-source SKALE Netowrk has a variety of tools sure to fit your needs. Check them out here
 		</Card>
 	</a>
