--- a/src/content/docs/quick-start/building-for-skale.mdx
+++ b/src/content/docs/quick-start/building-for-skale.mdx
@@ -1,25 +1,117 @@
 ---
 title: Building for SKALE
-description: Build on SKALE
+description: Learn how to build on SKALE
 ---
 import { SelectChain } from "../../../components/SelectChain";
-import { Card, CardGrid } from "@astrojs/starlight/components";
+import { Card, CardGrid, Steps, Tabs, TabItem } from "@astrojs/starlight/components";
 
-SKALE Chains and the greater SKALE Network offer a number of benefits 
+SKALE Chains and the greater SKALE Network offer a number of benefits for developers.
+The following page goes through a number of key topics about SKALE to help you build successfully.
 
-{/*#### sFUEL Distribution*/}
+### EVM Compatability
 
-{/* API Distribution, Proof of Work, Custodial Contract Distribution */}
+The SKALE Netowrk is a Layer-1 blockchain network that contains many individual SKALE Chains.
+Every SKALE Chain is fully EVM compatible meaning that all of your favorite tools on Etheruem,
+your existing smart contracts, and all of your scripts should work out of the box.
 
-{/*#### User Onboarding (Web2)*/}
+### Zero Gas Fees
 
-{/* Stardust, Invisible Wallets */}
+SKALE is known for it's zero gas fee model, but developers are often unware of the strategic decisions
+made at the chain level to make that happen. Every SKALE Chain contains a native token called SKALE Fuel (sFUEL).
+**sFUEL** is almost identical to **Ether** on Ethereum with the largest difference being that sFUEL by default has
+no monetary value or available market.
 
-{/*#### User Onboarding (Web3)*/}
+### How to Take Payments
 
-{/* Metaport, Portal, Meson.Fi */}
+It is quite common for dApps to use various mechanisms to represent value on chains.
+It is common to see many dApps use the native gas token of a chain -- Ether for example --
+to allow for payment. With sFUEL holding no monetary value, it means that alternative forms of value must be used.
+The most common way is to use ERC-20 tokens to represnet value.
+
+> #### Developer Tip
+>
+> See the [community guide](https://hackmd.io/@TheGreatAxios/SJWksGU2i) on how to use
+> ERC-20 instead of msg.value
+
+### Onboarding & sFUEL Distribution
+
+Onboarding users -- regardless of whether you are using non-custodial or custodial wallets -- is
+unique when it comes to SKALE.
+
+The traditional onboarding route for a user is:
+
+<Tabs>
+	<TabItem label="Non-Custodial">
+		<Steps>
+			1. User downloads a wallet
+			2. User visits CEX or Fiat onramp
+			3. *Optional* - User bridges to new network
+			4. User pays fees and clicks and manually approves every transaction
+		</Steps>
+	</TabItem>
+	<TabItem label="Custodial">
+		<Steps>
+			1. User logs in to application
+			2. User uses application
+			3. dApp pays the gas fees
+		</Steps>
+	</TabItem>
+	<TabItem label="Account Abstraction">
+		<Steps>
+			1. User logs in to application
+			2. An MPC, custodial, or background wallet is created 
+			3. User uses application
+			4. dApp pays the gas fees via paymaster
+		</Steps>
+	</TabItem>
+</Tabs>
+
+When building on SKALE, you will notice that by default you get to cut out at least one step.
+Additionally, in situations where you are "covering the fees" you will not have to worry about variable
+costs since the gas is always free.
+
+<Tabs>
+	<TabItem label="Non-Custodial">
+		<Steps>
+			1. User downloads a wallet
+			2. sFUEL Distribution occurs -- _automatically in the background_
+			3. User begins interacting with dApp immediatley
+		</Steps>
+	</TabItem>
+	<TabItem label="Custodial">
+		<Steps>
+			1. User logs in to application
+			2. sFUEL Distribution occurs -- _automatically in the background_
+			3. User uses application
+		</Steps>
+	</TabItem>
+	<TabItem label="Account Abstraction">
+		<Steps>
+			1. User logs in to application
+			2. An MPC, custodial, or background wallet is created 
+			3. User uses application
+			4. dApp pays the gas fees via paymaster -- _no varaible costs for dApp_
+		</Steps>
+	</TabItem>
+</Tabs>
+
+{/* Add sFUEL Distribution Callout */}
+
+### Understanding Finality
+
+SKALE Chains are well known for being incredibly fast.
+While the overall throughput of a SKALE Chain averages around 400 transactions per second (TPS); 
+it is the finality that makes a big difference. SKALE Chains themselves are not Layer-2's and are not
+rollups of any kind. This means you don't have to wait for any sort of finality on Ethereum to ensure finality on SKALE.
+
+SKALE Chains also cannot fork. With the validators working together using a leaderless consensus protocol; you only
+need to wait for the block that transactions are in to be published to the chain, a.k.a **1 block**, to ensure that things are final.
 
 ### Tools
+
+Need more than just the SKALE Chain? Checkout our extensive 
+list of 3rd party tools and partners.
+
 <CardGrid>
 	<a style="text-decoration: none;" href="/tools/wallets">
 		<Card title="Wallets">
