Push Fixes to Onboarding Go Live Piece, No link to Onboarding

--- a/src/content/docs/quick-start/index.mdx
+++ b/src/content/docs/quick-start/index.mdx
@@ -18,7 +18,7 @@ bridge and the network utility token all on the Ethereum Mainnet.
 
 You can learn more about SKALE [here](/learn/about-skale-network).
 
-## Deploy to Testnet
+### Next Step: Deploy to Testnet
 
 The following pages guide you through deploying to a SKALE Testnet.
 Once you are done building and deploying on SKALE Testnet you can follow the go-live tests.
