Resolve Aside Request

--- a/src/content/docs/quick-start/building-for-skale.mdx
+++ b/src/content/docs/quick-start/building-for-skale.mdx
@@ -28,10 +28,10 @@ It is common to see many dApps use the native gas token of a chain -- Ether for 
 to allow for payment. With sFUEL holding no monetary value, it means that alternative forms of value must be used.
 The most common way is to use ERC-20 tokens to represnet value.
 
-> #### Developer Tip
->
-> See the [community guide](https://hackmd.io/@TheGreatAxios/SJWksGU2i) on how to use
-> ERC-20 instead of msg.value
+:::note[Developer Tip]
+See the [community guide](https://hackmd.io/@TheGreatAxios/SJWksGU2i) on how to use
+ERC-20 instead of msg.value
+:::
 
 ### Onboarding & sFUEL Distribution
 
