Fix Verbiage on building

--- a/src/content/docs/quick-start/building-for-skale.mdx
+++ b/src/content/docs/quick-start/building-for-skale.mdx
@@ -75,7 +75,7 @@ costs since the gas is always free.
 		<Steps>
 			1. User downloads a wallet
 			2. sFUEL Distribution occurs -- _automatically in the background_
-			3. User begins interacting with dApp immediatley
+			3. User uses application
 		</Steps>
 	</TabItem>
 	<TabItem label="Custodial">
