Add Improved Titles for Onboarding Sections

--- a/src/content/docs/quick-start/building-for-skale.mdx
+++ b/src/content/docs/quick-start/building-for-skale.mdx
@@ -38,7 +38,7 @@ ERC-20 instead of msg.value
 Onboarding users -- regardless of whether you are using non-custodial or custodial wallets -- is
 unique when it comes to SKALE.
 
-The traditional onboarding route for a user is:
+#### Traditional Onboarding
 
 <Tabs>
 	<TabItem label="Non-Custodial">
@@ -65,6 +65,8 @@ The traditional onboarding route for a user is:
 		</Steps>
 	</TabItem>
 </Tabs>
+
+#### SKALE Onboarding
 
 When building on SKALE, you will notice that by default you get to cut out at least one step.
 Additionally, in situations where you are "covering the fees" you will not have to worry about variable
