Fix Broken Tool Links

--- a/src/content/docs/quick-start/building-for-skale.mdx
+++ b/src/content/docs/quick-start/building-for-skale.mdx
@@ -115,22 +115,22 @@ Need more than just the SKALE Chain? Checkout our extensive
 list of 3rd party tools and partners.
 
 <CardGrid>
-	<a style="text-decoration: none;" href="/tools/wallets">
+	<a style="text-decoration: none;" href="/builders/tools/wallets">
 		<Card title="Wallets">
 			Explore the various wallet options available throughout the SKALE Ecosystem
 		</Card>
 	</a>
-	<a style="text-decoration: none;" href="/tools/bridges">
+	<a style="text-decoration: none;" href="/builders/tools/bridges">
 		<Card title="Bridging">
 			Learn more about how to help facilitate bridging to or from a SKALE Chain
 		</Card>
 	</a>
-	<a style="text-decoration: none;" href="/tools/data">
+	<a style="text-decoration: none;" href="/builders/tools/data">
 		<Card title="Data & Indexers">
 			Checkout the tools and options to help you utilize SKALE Chain data
 		</Card>
 	</a>
-	<a style="text-decoration: none;" href="/tools/libraries">
+	<a style="text-decoration: none;" href="/builders/tools/libraries">
 		<Card title="Developer Tools">
 			Find the best tools to help you build and deploy dApps quickly
 		</Card>
