Update Comment for sFUEL Dist. Aside

--- a/src/content/docs/quick-start/building-for-skale.mdx
+++ b/src/content/docs/quick-start/building-for-skale.mdx
@@ -97,7 +97,7 @@ costs since the gas is always free.
 	</TabItem>
 </Tabs>
 
-{/* Add sFUEL Distribution Callout */}
+{/* Add sFUEL Distribution Callout as aside*/}
 
 ### Understanding Finality
 
