--- a/src/content/docs/builders/tools/nfts/nft-api.mdx
+++ b/src/content/docs/builders/tools/nfts/nft-api.mdx
@@ -7,9 +7,9 @@ import {Content as Crossmint} from './nft-apis/crossmint.mdx';
 import {Content as Reservoir} from './nft-apis/reservoir.mdx';
 
 <Tabs>
-<TabItem label="Crossmint">
+{/* <TabItem label="Crossmint"> 
 <Crossmint/>
-</TabItem>
+</TabItem>*/}
 <TabItem label="Reservoir">
 <Reservoir/>
 </TabItem>
