--- a/src/content/docs/builders/tools/index.mdx
+++ b/src/content/docs/builders/tools/index.mdx
@@ -6,61 +6,49 @@ sidebar:
   order: 0
 ---
 
-import { Card, CardGrid } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-The tools section covers available tooling for developing on SKALE. This includes SDKs, Wallets, Libraries, and more. The following section contains links to their respective categories.
+The tools section covers available tooling for developing on SKALE. This includes SDKs, Wallets, Libraries, and more.
 
 ## Explore Tools by Category
 
+
+
 <CardGrid>
-	<a style="text-decoration: none;"href="/tools/wallets">
-		<Card title="Wallets">
-			Explore different non-custodial, custodial, and MPC wallets that support SKALE Chains
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/libraries">
-		<Card title="EVM Libraries">
-			See commonly used EVM SDKs in languages like JavaScript, C#, and more
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/nfts">
-		<Card title="NFTs">
-			Check the popular SKALE tools to be used in your NFT collections
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/gaming">
-		<Card title="Gaming SDKs">
-			Gaming SDKs for Web3 Games
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/bridges">
-		<Card title="Bridges">
-			Enable messages and tokens to be moved with various bridges and libraries
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/contracts">
-		<Card title="Contracts">
-			Popular Contracts and Contract based Tooling
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/data">
-		<Card title="Data & Indexers">
-			Tooling to improve access to blockchain data
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/oracles">
-		<Card title="Oracles">
-			Access blockchain data and price feeds
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/payments">
-		<Card title="Payments">
-			Check the best way to use payments on SKALE chains
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/skale">
-		<Card title="SKALE Specific">
-			Use libraries and packages specific for the SKALE ecosystem
-		</Card>
-	</a>
+	<LinkCard
+		title="Wallets"
+		href="/builders/tools/wallets"
+		/>
+	<LinkCard
+		title="Libraries"
+		href="/builders/tools/libraries"
+		/>
+	<LinkCard
+		title="NFTs"
+		href="/builders/tools/nfts"
+		/>
+	<LinkCard
+		title="Gaming SDKs"
+		href="/builders/tools/gaming"
+		/>
+	<LinkCard
+		title="Bridges"
+		href="/builders/tools/bridges"
+		/>
+	<LinkCard
+		title="Contracts"
+		href="/builders/tools/contracts"
+		/>
+	<LinkCard
+		title="Data & Indexers"
+		href="/builders/tools/data"
+		/>
+	<LinkCard
+		title="Oracles"
+		href="/builders/tools/oracles"
+		/>
+	<LinkCard
+		title="Payments"
+		href="/builders/tools/payments"
+		/>
 </CardGrid>
