--- a/src/content/docs/builders/tools/wallets/index.mdx
+++ b/src/content/docs/builders/tools/wallets/index.mdx
@@ -6,28 +6,27 @@ sidebar:
   order: 0
 ---
 
-import { Card, CardGrid } from "@astrojs/starlight/components";
+import {LinkCard ,CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid>
-	<a style="text-decoration: none;"href="/tools/wallets/non-custodial">
-		<Card title="Non-Custodial Wallets">
-			Non-custodial wallets SKALE compatible
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/wallets/custodial">
-		<Card title="Custodial Wallets">
-			Custodial wallets SKALE compatible
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/wallets/mpc">
-		<Card title="MPC Wallets">
-			MPC wallets SKALE compatible
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/wallets/aggregator">
-		<Card title="Aggregator">
-			Wallets aggregator tools SKALE compatible
-		</Card>
-	</a>
-
+	<LinkCard
+		title="Non-Custodial"
+		href="/builders/tools/wallets/non-custodial"
+		description="Users control private keys and manage their own security"
+		/>
+	<LinkCard
+		title="Custodial"
+		href="/builders/tools/wallets/custodial"
+		description="Third-party manages the private keys, providing a simpler user experience"
+	/>
+	<LinkCard
+		title="MPC"
+		href="/builders/tools/wallets/mpc"
+		description="Wallets utilizing distributed key management to enhance security and recovery"
+	/>
+	<LinkCard
+		title="Wallets Aggregator"
+		href="/builders/tools/wallets/aggregator"
+		description="Tools integrating multiple wallets for centralized portfolio management"
+	/>
 </CardGrid>
