--- a/src/content/docs/builders/tools/contracts/index.mdx
+++ b/src/content/docs/builders/tools/contracts/index.mdx
@@ -8,6 +8,11 @@ sidebar:
 
 import { LinkCard, CardGrid } from "@astrojs/starlight/components";
 
+The SKALE network ensures that most industry-standard tools and applications designed for Ethereum seamlessly integrate with SKALE. 
+
+This compatibility allows developers to utilize familiar tools and frameworks, such as Hardhat, Remix or OpenZeppelin.
+
+Additionally, SKALE provides common industry contract features, including Multicall contracts.
 
 <CardGrid>
 	<LinkCard
@@ -16,8 +21,18 @@ import { LinkCard, CardGrid } from "@astrojs/starlight/components";
 		description="Contract development environment for EVM blockchains"
 	/>
 	<LinkCard
+		title="Remix"
+		href="/builders/tools/contracts/remix"
+		description=""
+	/>
+	{/*<LinkCard
+		title="OpenZeppelin"
+		href="/builders/tools/contracts/openzeppelin"
+		description=""
+	/>
+	<LinkCard
 		title="Multicall"
 		href="/builders/tools/contracts/multicall"
 		description="Multicall smart contract deployed on SKALE Chains"
-	/>
+	/>*/}
 </CardGrid>
