--- a/src/content/docs/builders/tools/gaming/index.mdx
+++ b/src/content/docs/builders/tools/gaming/index.mdx
@@ -8,6 +8,10 @@ sidebar:
 
 import { LinkCard ,CardGrid } from "@astrojs/starlight/components";
 
+Web3 gaming SDKs significantly simplify the game development process by abstracting and streamlining blockchain interactions. 
+
+These SDKs allow developers to integrate blockchain features, such as asset ownership and in-game economies, with ease, freeing them from the complexities of blockchain technology. 
+
 <CardGrid>
 	<LinkCard
 		title="Eidolon"
