--- a/src/content/docs/builders/tools/libraries/index.mdx
+++ b/src/content/docs/builders/tools/libraries/index.mdx
@@ -8,6 +8,10 @@ sidebar:
 
 import { LinkCard ,CardGrid } from "@astrojs/starlight/components";
 
+SKALE's EVM compatibility enables developers to use a wide range of Web3 libraries in various programming languages, depending on their specific goals. 
+
+This flexibility allows seamless integration and interaction with the SKALE chains from almost any type of application, whether web, mobile, or desktop
+
 <CardGrid>
 	<LinkCard
 		title="Web"
