--- a/src/content/docs/builders/tools/nfts/index.mdx
+++ b/src/content/docs/builders/tools/nfts/index.mdx
@@ -8,6 +8,7 @@ sidebar:
 
 import { LinkCard, CardGrid } from "@astrojs/starlight/components";
 
+SKALE encompasses a comprehensive suite of tools and features specifically designed for NFTs, aimed at addressing the diverse requirements developers may encounter when creating their NFT collections.
 
 <CardGrid>
 	<LinkCard
