--- a/src/content/docs/builders/tools/nfts/marketplaces.mdx
+++ b/src/content/docs/builders/tools/nfts/marketplaces.mdx
@@ -11,10 +11,10 @@ import {Content as Snag} from './marketplaces/snag.mdx';
 <TabItem label="Keepsake">
 <Keepsake/>
 </TabItem>
-<TabItem label="Pixelrealm">
-<Keepsake/>
+<TabItem label="Pixel Realm">
+<Pixelrealm/>
 </TabItem>
-<TabItem label="Snag">
-<Keepsake/>
-</TabItem>
+{/*<TabItem label="Snag">
+<Snag/>
+</TabItem>*/}
 </Tabs>
