--- a/src/content/docs/builders/tools/nfts/marketplaces/keepsake.mdx
+++ b/src/content/docs/builders/tools/nfts/marketplaces/keepsake.mdx
@@ -4,9 +4,15 @@ description: Intro to KeepSake
 ---
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
-Keepsake is a marketplace built on two distinct SKALE Chains: Calypso and Nebula.
+Keepsake is a marketplace built on two distinct SKALE Chains: **Calypso** and **Nebula**.
 
-It enables users to buy and sell NFTs and incorporates the SKALE metaport widget, allowing free bridging of various ERC-20 tokens between the SKALE Chains.
+
+Some of the main features are:
+
+|SKALE Chains|Payments|Embeded Bridging|Launchpad|
+|-|-|-|-|
+|SKALE Calyspo <br>SKALE Nebula</br>| USDC | SKALE IMA Bridge | No |
+
 
 For more information please check one of the two marketplaces:
 - [Keepsake Calypso Marketplace](https://skale.keepsake.gg/)
