--- a/src/content/docs/builders/tools/nfts/marketplaces/pixelrealm.mdx
+++ b/src/content/docs/builders/tools/nfts/marketplaces/pixelrealm.mdx
@@ -1,14 +1,15 @@
 ---
-title: Pixelrealm
+title: Pixel Realm
 description: Intro to Pixelrealm
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
-<ToolLayout
-    introParagraph=""
-    toolName=""
-    toolLink=""
-    toolDocsLink=""
->
+Pixel Realm is a multichain marketplace integrated on the **SKALE Nebula Hub**.
 
-</ToolLayout>
+Some of the main features are:
+
+|SKALE Chains|Payments|Embeded Bridging|Launchpad|
+|-|-|-|-|
+|SKALE Nebula| USDC | No | [Yes](https://app.pixelrealm.io/launch/) |
+
+
+For more information please the [marketplace](https://app.pixelrealm.io/).
