--- a/src/content/docs/builders/tools/oracles/index.mdx
+++ b/src/content/docs/builders/tools/oracles/index.mdx
@@ -8,6 +8,9 @@ sidebar:
 
 import { LinkCard , CardGrid } from "@astrojs/starlight/components";
 
+Oracles on blockchain serve as bridges between smart contracts and the external world, providing the necessary data for executing contract terms based on real-world events.
+
+KALE offers a variety of oracle solutions, allowing developers to choose the most suitable options for their specific needs.
 
 <CardGrid>
 	<LinkCard
