--- a/src/content/docs/builders/tools/wallets/index.mdx
+++ b/src/content/docs/builders/tools/wallets/index.mdx
@@ -8,6 +8,10 @@ sidebar:
 
 import {LinkCard ,CardGrid } from "@astrojs/starlight/components";
 
+There are currently multiple types of wallets available, each designed to meet the diverse needs of different users. 
+
+The SKALE chains provide comprehensive support for these various wallet solutions, ensuring that both developers and users have access to the tools that best suit their requirements.
+
 <CardGrid>
 	<LinkCard
 		title="Non-Custodial"
