--- a/src/content/docs/builders/tools/wallets/aggregator.mdx
+++ b/src/content/docs/builders/tools/wallets/aggregator.mdx
@@ -1,6 +1,6 @@
 ---
-title: Wallets Aggregator
-description: Intro to Wallets Aggregator
+title: Wallet Aggregators
+description: Intro to Wallet Aggregators
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import {Content as WalletConnect} from './aggregator/wallet-connect.mdx';
