--- a/src/content/docs/builders/tools/wallets/index.mdx
+++ b/src/content/docs/builders/tools/wallets/index.mdx
@@ -29,8 +29,8 @@ The SKALE chains provide comprehensive support for these various wallet solution
 		description="Wallets utilizing distributed key management to enhance security and recovery"
 	/>
 	<LinkCard
-		title="Wallets Aggregator"
+		title="Wallet Aggregators"
 		href="/builders/tools/wallets/aggregator"
-		description="Tools integrating multiple wallets for centralized portfolio management"
+		description="Wallet aggregators allow for a variety of wallet connections"
 	/>
 </CardGrid>
